[package]
name = "raudra"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.11", features = ["rustls-tls", "gzip", "stream"] }
hdrhistogram = "7.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rand = "0.8"
colored = "2.0" 
terminal_size = "0.3"

